# Snake

./: .gitignore  CMakeLists.txt  Game.cpp  Makefile  README.md
include/: Snake.hpp
src/: Game.cpp  app.cpp
